Sidebar: Word break Prevents text overflow into main page area, mostly from database timestamps

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -130,6 +130,7 @@ a:link {
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
+  word-break: break-word;
 }
 
 select {
